# sky

./: .gitignore  CMakeLists.txt  README.md
data/shaders/: aerialPerspective_comp.glsl  common_func.glsl  farSky_frag.glsl  finalComposition_frag.glsl  histogramGenerate_comp.glsl  histogramSum_comp.glsl  multiScattering_comp.glsl  quad_vert.glsl  screenTriangle_vert.glsl  skyView_comp.glsl  transmittance_comp.glsl
data/shaders/buffers/: common_param_buff.glsl  post_process_param_buff.glsl
lib/: CMakeLists.txt
src/Sky/: Application.cpp  CMakeLists.txt  SkyApplication.cpp  SkyApplication.hpp  main.cpp
src/Sky/bruneton/: definitions.glsl
src/Sky/core/: Camera.cpp  Camera.hpp
src/Sky/model/: SkyModel.cpp  SkyModel.hpp
src/Sky/opengl/: BufferDefines.hpp
